--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
     "expo": "~54.0.0",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
